hoplite/microbenchmarks/hoplite-python/log/20240221-164258.454747693-roundtrip-2-1024/rank_0.log
  File "hoplite_microbenchmarks.py", line 153
    if world_size != 2:
                      ^
IndentationError: unindent does not match any outer indentation level
